--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This framework is a method of attaching an ES6 class to a DOM element or collection of DOM elements.",
   "main": "lib/index.js",
   "scripts": {
-    "prepare": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
+    "prepare": "./node_modules/.bin/babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alley Interactive (alleyinteractive.com)",
@@ -30,6 +30,5 @@
     "@babel/core": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35"
   },
-  "dependencies": {},
-  "browserslist": "last 2 versions, ie 10"
+  "dependencies": {}
 }
