--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "bugs": {
     "url": "https://github.com/alleyinteractive/js-component-framework/issues"
   },
+  "files": [
+    "lib"
+  ],
   "homepage": "https://github.com/alleyinteractive/js-component-framework#readme",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.35",
