--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   ],
   "homepage": "https://github.com/alleyinteractive/js-component-framework#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.35",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   },
   "dependencies": {}
 }
