--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-component-framework",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This framework is a method of attaching an ES6 class to a DOM element or collection of DOM elements.",
   "main": "lib/index.js",
   "scripts": {
@@ -33,5 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fastdom": "^1.0.6"
+  }
 }
