Add browserslist settings, switch to using bottleneck/es5
Also run `npm audit fix`

--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "bottleneck": "^2.9.0",
     "core-js": "^2.5.3",
     "fastdom": "^1.0.6"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "ie 11"
+  ]
 }
