--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "transform-es2015-parameters",
     ["transform-runtime", {
       "polyfill": false,
       "regenerator": true
