replace bottleneck package

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
     "transform-es2015-parameters",
     ["@babel/transform-runtime", {
       "regenerator": true
-    }]
+    }],
+    "@babel/plugin-transform-spread"
   ],
   "presets": [
     ["@babel/preset-env"]
