--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-component-framework",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "This framework is a method of attaching an ES6 class to a DOM element or collection of DOM elements.",
   "main": "lib/index.js",
   "scripts": {
@@ -32,12 +32,12 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-spread": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
     "babel-plugin-transform-es2015-parameters": "^6.24.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "bottleneck": "^2.15.3",
     "core-js": "^2.5.3",
     "fastdom": "^1.0.6"
   },
