--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-component-framework",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.1",
   "description": "A framework for configuring a JavaScript component and attaching it to a DOM element or collection of DOM elements, simplifying organization of DOM interactions on your website.",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -12,11 +12,13 @@
     "prepare": "npm run build:esm && npm run build:commonjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alley Interactive (alley.co)",
+  "author": "Alley Interactive (alley.com)",
   "contributors": [
-    "Owen Stowe <owen@alley.co> (alley.co)",
-    "Pattie Reaves <pattie@alley.co> (alley.co)",
-    "Ryan Domingue <ryan@alley.co> (alley.co)"
+    "Matthew Ell <matt.ell@alley.com> (alley.com)",
+    "Owen Stowe <owen@alley.com> (alley.com)",
+    "Pattie Reaves <pattie@alley.com> (alley.com)",
+    "Ryan Domingue <ryan@alley.com> (alley.com)",
+    "Steven Slack <steven@alley.com> (alley.com)"
   ],
   "license": "GPL-2.0",
   "repository": {
