--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,4 +1,7 @@
 {
+  "presets": [
+    "@babel/preset-env",
+  ],
   "env": {
     "es": {
       "plugins": ["@babel/plugin-transform-runtime"],
@@ -13,11 +16,6 @@
     },
     "cjs": {
       "plugins": ["@babel/plugin-transform-runtime"],
-      "presets": [
-        [
-          "@babel/preset-env"
-        ]
-      ]
     }
   }
 }
