--- a/package.json
+++ b/package.json
@@ -43,15 +43,13 @@
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@babel/runtime": "^7.16.5",
     "babel-jest": "^29.5.0",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
     "jest": "^29.5.0",
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.16.5"
   },
   "browserslist": [
     "defaults",
