--- a/package.json
+++ b/package.json
@@ -54,5 +54,16 @@
   "browserslist": [
     "defaults",
     "not IE 11"
-  ]
+  ],
+  "exports": {
+    ".": {
+      "import": "./es/index.js",
+      "default": "./lib/index.js"
+    },
+    "./v2": {
+      "import": "./es/v2/index.js",
+      "default": "./lib/v2/index.js"
+    },
+    "./es": "./es/index.js"
+  }
 }
